--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
   <title>jojo cakes</title>
 
 </head>
+<header id="header" class="">
+  <script src="/javascripts/application.js" type="text/javascript" charset="utf-8" async defer></script>
+</header><!-- /header -->
 <body>
 
 <img src="public/images/almond_crumble_500.jpg" alt="almond crumble">
+<img src="https://drive.google.com/uc?id=0B9VPtgc4eQJJM29vWmJZOXhWenc" width="500" height="500">
 
+<div>
+<a data-flickr-embed="true"  href="https://www.flickr.com/photos/136826094@N05/albums/72157666018066712" title="jojo cakes"><img src="https://farm2.staticflickr.com/1538/25950864485_ef58aeca97.jpg" width="500" height="485" alt="jojo cakes"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+</div>
 </body>
 </html>
 
