--- a/about.html
+++ b/about.html
@@ -42,12 +42,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">JoJo Cakes</a>
+          <a class="navbar-brand" href="index.html">JoJo Cakes</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="#">About</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -57,38 +57,11 @@
     <div class="container">
 
       <div class="starter-template">
-        <h1>Sweet memories made from scratch</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-
-      </div>
-      <div class="row">
-        <div class="col-sm-6 col-md-4">
-          <div class="thumbnail">
-            <img src="https://drive.google.com/uc?id=0B9VPtgc4eQJJdWM3R3ZLZUwzWTg">
-            <div class="caption">
-              <h3>Hump Day High</h3>
-              <p>Chocolate layers, whipped marscapone, buttercream, slated caramel sauce, chili dark chocolate covered potato chips.</p>
-          </div>
-          </div>
-        </div>
-                <div class="col-sm-6 col-md-4">
-          <div class="thumbnail">
-            <img src="https://drive.google.com/uc?id=0B9VPtgc4eQJJcVU3OEtIVW04ZjQ">
-            <div class="caption">
-              <h3>Spring In Brooklyn</h3>
-              <p>White cake with lemon buttercream topped with pistachio, raspberry, and lemon macarons.</p>
-          </div>
-          </div>
-        </div>
-                <div class="col-sm-6 col-md-4">
-          <div class="thumbnail">
-            <img src="https://drive.google.com/uc?id=0B9VPtgc4eQJJSTNoNnc0VnNEbGM">
-            <div class="caption">
-              <h3>Sugar-n-Spice</h3>
-              <p>White layer cake, ombre buttercream frosting, lemon buttercream, almond sugar cookie, lolly pops.</p>
-          </div>
-          </div>
-        </div>
+        <h1>Sweet memories made from scratch.</h1>
+        <p class="lead">From a large Italian-American family, food was integral to her family's togetherness.
+        <br>Joanna loved learning to cook by her mother's side.
+        <br>But dessert was always Joanna's favorite part.
+        <br>Now she's sharing the sweetness with you.
       </div>
 
     </div><!-- /.container -->
