--- a/contact.html
+++ b/contact.html
@@ -42,13 +42,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">JoJo Cakes</a>
+          <a class="navbar-brand" href="index.html">JoJo Cakes</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="#">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -57,39 +57,48 @@
     <div class="container">
 
       <div class="starter-template">
-        <h1>Sweet memories made from scratch</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+        <h1>Sweet memories made from scratch.</h1>
+        <p class="lead">Contact Joanna to see how she can make your next even extra special.
 
       </div>
       <div class="row">
-        <div class="col-sm-6 col-md-4">
-          <div class="thumbnail">
-            <img src="https://drive.google.com/uc?id=0B9VPtgc4eQJJdWM3R3ZLZUwzWTg">
-            <div class="caption">
-              <h3>Hump Day High</h3>
-              <p>Chocolate layers, whipped marscapone, buttercream, slated caramel sauce, chili dark chocolate covered potato chips.</p>
+        <form class="form-horizontal" role="form" method="post" action="index.php">
+          <div class="form-group">
+              <label for="name" class="col-sm-2 control-label">Name</label>
+              <div class="col-sm-10">
+                  <input type="text" class="form-control" id="name" name="name" placeholder="First & Last Name" value="">
+              </div>
           </div>
+          <div class="form-group">
+              <label for="email" class="col-sm-2 control-label">Email</label>
+              <div class="col-sm-10">
+                  <input type="email" class="form-control" id="email" name="email" placeholder="example@domain.com" value="">
+              </div>
           </div>
-        </div>
-                <div class="col-sm-6 col-md-4">
-          <div class="thumbnail">
-            <img src="https://drive.google.com/uc?id=0B9VPtgc4eQJJcVU3OEtIVW04ZjQ">
-            <div class="caption">
-              <h3>Spring In Brooklyn</h3>
-              <p>White cake with lemon buttercream topped with pistachio, raspberry, and lemon macarons.</p>
+          <div class="form-group">
+              <label for="message" class="col-sm-2 control-label">Message</label>
+              <div class="col-sm-10">
+                  <textarea class="form-control" rows="4" name="message"></textarea>
+              </div>
           </div>
+          <div class="form-group">
+              <label for="human" class="col-sm-2 control-label">2 + 3 = ?</label>
+              <div class="col-sm-10">
+                  <input type="text" class="form-control" id="human" name="human" placeholder="Your Answer">
+              </div>
           </div>
-        </div>
-                <div class="col-sm-6 col-md-4">
-          <div class="thumbnail">
-            <img src="https://drive.google.com/uc?id=0B9VPtgc4eQJJSTNoNnc0VnNEbGM">
-            <div class="caption">
-              <h3>Sugar-n-Spice</h3>
-              <p>White layer cake, ombre buttercream frosting, lemon buttercream, almond sugar cookie, lolly pops.</p>
+          <div class="form-group">
+              <div class="col-sm-10 col-sm-offset-2">
+                  <input id="submit" name="submit" type="submit" value="Send" class="btn btn-primary">
+              </div>
           </div>
+          <div class="form-group">
+              <div class="col-sm-10 col-sm-offset-2">
+                  <! Will be used to display an alert to the user>
+              </div>
           </div>
-        </div>
-      </div>
+      </form>
+    </div>
 
     </div><!-- /.container -->
 
