--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <div class="starter-template">
         <h1>Sweet memories made from scratch</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+        <p class="lead">Custom desserts to end your next special event on a sweet note.</p>
 
       </div>
       <div class="row">
