--- a/contact.html
+++ b/contact.html
@@ -54,54 +54,33 @@
       </div>
     </nav>
 
-    <div class="container">
-
+  <div class="container">
+    <div class="row">
       <div class="starter-template">
-        <h1>Sweet memories made from scratch.</h1>
-        <p class="lead">Contact Joanna to see how she can make your next even extra special.
-
-      </div>
-      <div class="row">
-        <form class="form-horizontal" role="form" method="post" action="index.php">
+        <h2>Contact Joanna to make your dream dessert a reality.</h2>
+          <div class="well" align="center">
+          <form name="signup" action="thank-you.html">
           <div class="form-group">
-              <label for="name" class="col-sm-2 control-label">Name</label>
-              <div class="col-sm-10">
-                  <input type="text" class="form-control" id="name" name="name" placeholder="First & Last Name" value="">
-              </div>
+            <label for="email">Email address</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
           </div>
           <div class="form-group">
-              <label for="email" class="col-sm-2 control-label">Email</label>
-              <div class="col-sm-10">
-                  <input type="email" class="form-control" id="email" name="email" placeholder="example@domain.com" value="">
-              </div>
+             <label for="firstName">First Name</label>
+              <input type="text" class="form-control" id="firstName" placeholder="First Name">
           </div>
           <div class="form-group">
-              <label for="message" class="col-sm-2 control-label">Message</label>
-              <div class="col-sm-10">
-                  <textarea class="form-control" rows="4" name="message"></textarea>
-              </div>
-          </div>
-          <div class="form-group">
-              <label for="human" class="col-sm-2 control-label">2 + 3 = ?</label>
-              <div class="col-sm-10">
-                  <input type="text" class="form-control" id="human" name="human" placeholder="Your Answer">
-              </div>
-          </div>
-          <div class="form-group">
-              <div class="col-sm-10 col-sm-offset-2">
-                  <input id="submit" name="submit" type="submit" value="Send" class="btn btn-primary">
-              </div>
-          </div>
-          <div class="form-group">
-              <div class="col-sm-10 col-sm-offset-2">
-                  <! Will be used to display an alert to the user>
-              </div>
-          </div>
+             <label for="lastName">Last Name</label>
+               <input type="text" class="form-control" id="lastName" placeholder="Last Name">
+           </div>
+           <div class="form-group">
+           <label for="moreInformation">Comments to Joanna</label>
+            <br><textarea class="form-control" rows="4"></textarea>
+           </div>
+            <br><button type="button" class="btn">Contact me!</button>
       </form>
-    </div>
-
+      </div>
     </div><!-- /.container -->
-
+  </div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
