contact form works

--- a/thank-you.html
+++ b/thank-you.html
@@ -47,40 +47,20 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
-  <div class="container">
-    <div class="row">
+    <div class="container">
+
       <div class="starter-template">
-        <h2>Contact Joanna to make your dream dessert a reality.</h2>
-          <div class="well" align="center">
-          <form name="Signup" action="thank-you.html">
-          <div class="form-group">
-            <label for="email">Email address</label>
-              <input type="email" class="form-control" name="email" placeholder="Email">
-          </div>
-          <div class="form-group">
-             <label for="firstName">First Name</label>
-              <input type="text" class="form-control" name="firstName" placeholder="First Name">
-          </div>
-          <div class="form-group">
-             <label for="lastName">Last Name</label>
-               <input type="text" class="form-control" name="lastName" placeholder="Last Name">
-           </div>
-           <div class="form-group">
-           <label for="moreInformation">Comments to Joanna</label>
-            <br><textarea name="comments" class="form-control" rows="4"></textarea>
-           </div>
-            <br><button type="submit" class="btn">Contact me!</button>
-      </form>
-      </div>
+
+
     </div><!-- /.container -->
-  </div>
+
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
