update about and instagram logo

--- a/contact.html
+++ b/contact.html
@@ -80,6 +80,8 @@
       </form>
       </div>
     </div><!-- /.container -->
+    <p><a href="https://www.instagram.com/jojo.cakes/?ref=badge" class="ig-b- ig-b-32"><img src="https://badges.instagram.com/static/images/ig-badge-32.png" alt="Instagram" /></a>
+        Follow jojo.cakes on Instagram
   </div>
 
     <!-- Bootstrap core JavaScript
