--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
       <div class="starter-template">
         <h1>Sweet memories made from scratch</h1>
         <p class="lead">Custom desserts to end your next special event on a sweet note.</p>
-
+        <a href="https://www.instagram.com/jojo.cakes/?ref=badge" class="ig-b- ig-b-32"><img src="https://badges.instagram.com/static/images/ig-badge-32.png" alt="Instagram" /></a>
+        Follow jojo.cakes on Instagram
       </div>
       <div class="row">
         <div class="col-sm-6 col-md-4">
