--- a/about.html
+++ b/about.html
@@ -58,38 +58,30 @@
 
       <div class="starter-template">
         <h1>Sweet memories made from scratch.</h1>
-        <p class="lead">JoJo Cakes is a one woman company.  It is owned and operated solely by me, Joanna
+        <p class="lead">
+        JoJo Cakes is a one woman company.  It is owned and operated solely by me, Joanna
+        Breneman.  Growing up, my grandparent’s daily coffee&cake hour was my favorite time
+        of the day.  Not only did I relish the time spent with my grandparents, but also
+        devoured my grandmother’s baked goods.  And that is how my love affair with baking began.
 
-Breneman.  Growing up, my grandparent’s daily coffee&cake hour was my favorite
+        <p>The kitchen quickly became my nook of the house.  Alongside my Italian-American
+        mother and grandmother I developed a love for all things food.  Growing up I earned
+        a reputation for never arriving empty handed to a dinner party.  Instead my hands
+        were always filled with delicious goodies made with love and care.  Over the years
+        that evolved into friends requesting my specialty desserts and, eventually, a business
+        creating individualized creations for all kinds of special occasions.
 
-hour (or time) of the day.  Not only did I enjoy (or relish) the time spent with my
+        <p>All my desserts are handmade from scratch using high quality ingredients, right in
+        my Brooklyn kitchen.  A fusion of my Italian heritage, southern up-bringing, and
+        listening to my clients’ requests and preferences makes each of my desserts unique
+        and special to the occasion.
 
-grandparents, but also devoured my grandmother’s baked goods.  And that is how
+        <p><a href="https://www.instagram.com/jojo.cakes/?ref=badge" class="ig-b- ig-b-32"><img src="https://badges.instagram.com/static/images/ig-badge-32.png" alt="Instagram" /></a>
+        Follow jojo.cakes on Instagram
 
-(and when) my love affair with baking began.
-
-<p>The kitchen quickly became my nook of the house.  Alongside my Italian-American
-
-mother and grandmother I developed a love for all things food.  Growing up I earned
-
-a reputation for never arriving empty handed to a dinner party.  Instead my hands
-
-were always filled with delicious goodies made with love and care.  Over the years
-
-that has evolved into friends requesting some of my specialty desserts and
-
-eventually turning into profit earning, individualized creations for all kinds of
-
-special occasions.
-
-<p>All my desserts are handmade from scratch using high quality ingredients, right in
-
-my Brooklyn kitchen.  A fusion of my Italian heritage, southern up-bringing, and
-
-listening to my clients’ requests and preferences makes each of my desserts unique
-
-and special to the occasion.
       </div>
+
+
 
     </div><!-- /.container -->
 
