--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
         <h1>Sweet memories made from scratch.</h1>
         <p class="lead">
         JoJo Cakes is a one woman company.  It is owned and operated solely by me, Joanna
-        Breneman.  Growing up, my grandparent’s daily coffee&cake hour was my favorite time
+        Breneman.  Growing up, my grandparent’s daily coffee & cake hour was my favorite time
         of the day.  Not only did I relish the time spent with my grandparents, but also
         devoured my grandmother’s baked goods.  And that is how my love affair with baking began.
 
@@ -76,12 +76,15 @@
         listening to my clients’ requests and preferences makes each of my desserts unique
         and special to the occasion.
 
+        <p>Please <a href="Jojo.cakes.nyc@gmail.com">contact me</a> to arrange a free consultation to discuss your dream dessert.
+
         <p><a href="https://www.instagram.com/jojo.cakes/?ref=badge" class="ig-b- ig-b-32"><img src="https://badges.instagram.com/static/images/ig-badge-32.png" alt="Instagram" /></a>
         Follow jojo.cakes on Instagram
 
       </div>
 
 
+    <div><h6>Website by <a href="http://katitaylor.bitballoon.com/">Kati Taylor</a></h6></div>
 
     </div><!-- /.container -->
 
