--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="row">
         <div class="col-sm-6 col-md-4">
           <div class="thumbnail">
-            <img src="https://drive.google.com/uc?id=0B9VPtgc4eQJJdWM3R3ZLZUwzWTg">
+            <img src="public/images/hump_day_high_500.png">
             <div class="caption">
               <h3>Hump Day High</h3>
               <p>Chocolate layers, whipped marscapone, buttercream, slated caramel sauce, chili dark chocolate covered potato chips.</p>
@@ -74,7 +74,7 @@
         </div>
                 <div class="col-sm-6 col-md-4">
           <div class="thumbnail">
-            <img src="https://drive.google.com/uc?id=0B9VPtgc4eQJJcVU3OEtIVW04ZjQ">
+            <img src="public/images/spring_in_bklyn_500.jpg">
             <div class="caption">
               <h3>Spring In Brooklyn</h3>
               <p>White cake with lemon buttercream topped with pistachio, raspberry, and lemon macarons.</p>
@@ -83,7 +83,7 @@
         </div>
                 <div class="col-sm-6 col-md-4">
           <div class="thumbnail">
-            <img src="https://drive.google.com/uc?id=0B9VPtgc4eQJJSTNoNnc0VnNEbGM">
+            <img src="public/images/sugarinspice_500.jpg">
             <div class="caption">
               <h3>Sugar-n-Spice</h3>
               <p>White layer cake, ombre buttercream frosting, lemon buttercream, almond sugar cookie, lolly pops.</p>
@@ -91,6 +91,7 @@
           </div>
         </div>
       </div>
+    <div><h6>Website by <a href="http://katitaylor.bitballoon.com/">Kati Taylor</a></h6></div>
 
     </div><!-- /.container -->
 
