--- a/contact.html
+++ b/contact.html
@@ -79,11 +79,13 @@
             <br><button type="submit" class="btn">Contact me!</button>
       </form>
       </div>
-    </div><!-- /.container -->
-    <p><a href="https://www.instagram.com/jojo.cakes/?ref=badge" class="ig-b- ig-b-32"><img src="https://badges.instagram.com/static/images/ig-badge-32.png" alt="Instagram" /></a>
+      <div>
+        <p><a href="https://www.instagram.com/jojo.cakes/?ref=badge" class="ig-b- ig-b-32"><img src="https://badges.instagram.com/static/images/ig-badge-32.png" alt="Instagram" /></a>
         Follow jojo.cakes on Instagram
-  </div>
 
+        <p><h6>Website by <a href="http://katitaylor.bitballoon.com/">Kati Taylor</a></h6></div>
+
+    </div><!-- /.container -->
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
